--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_fr_CA.json
@@ -5,11 +5,11 @@
   "cpbc_hourly_instance_detail_title": "Serveurs",
   "cpbc_object_storage_detail_title": "Stockage d'objets",
   "cpbc_archive_storage_detail_title": "Stockage d'archives",
+  "cpbc_cold_archive_detail_title": "Cold Archive",
   "cpbc_snapshot_detail_title": "Stockage des sauvegardes",
   "cpbc_volume_detail_title": "Disques supplémentaires",
   "cpbc_hourly_instance_trafic_title": "Trafic public sortant des instances",
   "cpbc_hourly_private_registry_title": "Managed Private Registry",
-  "cpbc_hourly_serving_title": "ML Serving",
   "cpbc_hourly_training_title": "AI Training",
   "cpbc_hourly_notebooks_title": "AI Notebooks",
   "cpbc_hourly_ai_deploy_title": "AI Deploy",
