--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_en_GB.json
@@ -6,6 +6,6 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Exit",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Your {{containerName}} container still has {{objetsCount}} objects.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "To permanently delete your container, you must first delete the objects in it. See our <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide on managing archived objects with the AWS CLI</a>.",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "The {{containerName}} container has been deleted.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Deleting the {{containerName}} container.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "An error has occurred deleting the {{containerName}} container: {{message}}"
 }
