--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_es_ES.json
@@ -6,6 +6,6 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Cancelar",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "El contenedor {{containerName}} todavía tiene {{objetsCount}} objeto(s).",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Para eliminar el contenedor de forma definitiva, deberá eliminar todos los objetos que contiene. Consulte nuestra <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guía sobre cómo gestionar los objetos de un archivo con AWS CLI</a>.",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Se ha eliminado el contenedor {{ containerName }}.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "El contenedor {{ containerName }} se está eliminando.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Se ha producido un error al eliminar el contenedor {{ containerName }}: {{ message }}."
 }
