--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_it_IT.json
@@ -6,6 +6,6 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Annullare",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Il container {{containerName}} dispone ancora di {{objetsCount}} oggetti.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Per eliminare definitivamente il container è prima necessario rimuovere gli oggetti in esso contenuti. Se necessario, consulta la nostra guida per <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">gestire gli oggetti di un archivio con AWS CLI</a>.",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Il container {{ containerName }} è stato eliminato.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Eliminazione del container {{ containerName }} in corso...",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Si è verificato un errore durante l'eliminazione del container {{ containerName }}: {{ message }}"
 }
