--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_pl_PL.json
@@ -6,6 +6,6 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Anuluj",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Liczba obiektów, które znajdują się jeszcze w kontenerze {{containerName}}: {{objetsCount}}.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Aby trwale usunąć kontener, najpierw usuń znajdujące się w nim obiekty. Zapoznaj się z <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">przewodnikiem dotyczącym zarządzania obiektami archiwum za pomocą AWS CLI</a>.",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Kontener {{containerName}} został usunięty.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Trwa usuwanie kontenera {{containerName}}.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Wystąpił błąd podczas usuwania kontenera {{containerName}}: {{message}}"
 }
