--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_en_GB.json
@@ -2,5 +2,8 @@
   "pci_projects_project_storages_cold_archives_guides_storage-backup_title": "All storage and backup guides",
   "pci_projects_project_storages_cold_archives_guides_storage-backup_description": "All storage and backup guides",
   "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_title": "Create a public cloud project",
-  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Create a public cloud project"
+  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Create a public cloud project",
+  "pci_projects_project_storages_cold_archives_add_container_success_secret_label": "Your S3 secret key:",
+  "pci_projects_project_storages_cold_archive_containers_status_restore_date": "Until {{ date }}",
+  "pci_projects_project_storages_cold_archive_containers_status_restore_date_tooltip": "The date on which the restored files will be deleted from this container."
 }
