--- a/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_es_ES.json
@@ -6,5 +6,6 @@
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_username_label": "Su nombre de usuario S3:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_description_label": "Su descripción:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_access-key_label": "Su clave de acceso S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "Su clave secreta S3:"
+  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "Su clave secreta S3:",
+  "pci_projects_project_storages_containers_add_container_success": "El contenedor {{containerName}} se ha creado correctamente y el usuario S3 {{username}} se ha añadido como {{role}}."
 }
