--- a/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_it_IT.json
@@ -6,5 +6,6 @@
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_username_label": "Il tuo nome utente S3:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_description_label": "La tua descrizione:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_access-key_label": "La tua chiave di accesso S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "La tua chiave segreta S3:"
+  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "La tua chiave segreta S3:",
+  "pci_projects_project_storages_containers_add_container_success": "Il container {{containerName}} è stato creato correttamente e l'utente S3 {{username}} è stato aggiunto come {{role}}."
 }
