--- a/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_pl_PL.json
@@ -6,5 +6,6 @@
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_username_label": "Nazwa użytkownika S3:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_description_label": "Opis:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_access-key_label": "Klucz dostępowy S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "Tajny klucz S3:"
+  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "Tajny klucz S3:",
+  "pci_projects_project_storages_containers_add_container_success": "Kontener {{containerName}} został utworzony, a użytkownik S3 {{username}} dodany jako {{role}}."
 }
