--- a/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/components/user-credential-banner/translations/Messages_pt_PT.json
@@ -6,5 +6,6 @@
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_username_label": "O seu nome de utilizador S3:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_description_label": "A sua descrição:",
   "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_access-key_label": "A sua chave de acesso S3:",
-  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "A sua chave secreta S3:"
+  "pci_projects_project_storages_containers_add_create_or_linked_user_create_user_success_secret-key_label": "A sua chave secreta S3:",
+  "pci_projects_project_storages_containers_add_container_success": "O container {{containerName}} foi criado com sucesso e o utilizador S3 {{username}} foi adicionado enquanto {{role}}."
 }
