fix(pci.storages.databases): use vcores unit for cpu
ref: DATATR-99

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_de_DE.json
@@ -71,5 +71,7 @@
   "pci_database_add_spec_storage_added": "{{total}} (davon {{included}} inklusive)",
   "pci_database_add_price_unit_month": "/ Monat",
   "pci_database_add_price_unit_hour": "/ Stunde",
-  "pci_database_add_price_unit_switch_label": "Preise pro Monat anzeigen"
+  "pci_database_add_price_unit_switch_label": "Preise pro Monat anzeigen",
+  "pci_database_add_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_database_add_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
