--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_en_GB.json
@@ -71,5 +71,7 @@
   "pci_database_add_spec_storage_added": "{{total}} ({{included}} included)",
   "pci_database_add_price_unit_month": "/month",
   "pci_database_add_price_unit_hour": "/hour",
-  "pci_database_add_price_unit_switch_label": "Show prices per month"
+  "pci_database_add_price_unit_switch_label": "Show prices per month",
+  "pci_database_add_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_database_add_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
