--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_es_ES.json
@@ -71,5 +71,7 @@
   "pci_database_add_spec_storage_added": "{{total}} ({{included}} incluido(s))",
   "pci_database_add_price_unit_month": "/mes",
   "pci_database_add_price_unit_hour": "/hora",
-  "pci_database_add_price_unit_switch_label": "Mostrar los precios por mes"
+  "pci_database_add_price_unit_switch_label": "Mostrar los precios por mes",
+  "pci_database_add_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_database_add_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
