--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_fr_FR.json
@@ -48,7 +48,8 @@
   "pci_database_add_spec_region": "Datacentre :",
   "pci_database_add_spec_region_name": "{{region}} ({{alias}})",
   "pci_database_add_spec_flavor": "Modèle de nœud :",
-  "pci_database_add_spec_flavor_CPU": "{{cpu}} CPU",
+  "pci_database_add_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_database_add_spec_flavor_CPU_many": "{{cpu}} vCores",
   "pci_database_add_spec_flavor_RAM": "{{ram}} RAM",
   "pci_database_add_spec_cluster": "Cluster :",
   "pci_database_add_spec_network": "Type de réseau :",
