--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/translations/Messages_pt_PT.json
@@ -71,5 +71,7 @@
   "pci_database_add_spec_storage_added": "{{total}} (de {{included}} incluídos)",
   "pci_database_add_price_unit_month": "/mês",
   "pci_database_add_price_unit_hour": "/hora",
-  "pci_database_add_price_unit_switch_label": "Mostrar os preços ao mês"
+  "pci_database_add_price_unit_switch_label": "Mostrar os preços ao mês",
+  "pci_database_add_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_database_add_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
