--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_de_DE.json
@@ -60,5 +60,7 @@
   "pci_databases_backups_fork_price_unit_hour": "/ Stunde",
   "pci_databases_backups_fork_price_unit_switch_label": "Preise pro Monat anzeigen",
   "pci_databases_backups_fork_restore_mode_title": "Wiederherstellungspunkt",
-  "pci_databases_backups_fork_restore_mode_description": "Wählen Sie den Wiederherstellungspunkt aus, von dem aus der Dienst dupliziert wird."
+  "pci_databases_backups_fork_restore_mode_description": "Wählen Sie den Wiederherstellungspunkt aus, von dem aus der Dienst dupliziert wird.",
+  "pci_databases_backups_fork_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_databases_backups_fork_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
