--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_en_GB.json
@@ -60,5 +60,7 @@
   "pci_databases_backups_fork_price_unit_hour": "/hour",
   "pci_databases_backups_fork_price_unit_switch_label": "Show prices per month",
   "pci_databases_backups_fork_restore_mode_title": "Restore point",
-  "pci_databases_backups_fork_restore_mode_description": "Select the restore point from which the service will be duplicated."
+  "pci_databases_backups_fork_restore_mode_description": "Select the restore point from which the service will be duplicated.",
+  "pci_databases_backups_fork_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_databases_backups_fork_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
