--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_es_ES.json
@@ -60,5 +60,7 @@
   "pci_databases_backups_fork_price_unit_hour": "/hora",
   "pci_databases_backups_fork_price_unit_switch_label": "Mostrar los precios por mes",
   "pci_databases_backups_fork_restore_mode_title": "Punto de restauración",
-  "pci_databases_backups_fork_restore_mode_description": "Seleccione el punto de restauración desde el que desea duplicar el servicio."
+  "pci_databases_backups_fork_restore_mode_description": "Seleccione el punto de restauración desde el que desea duplicar el servicio.",
+  "pci_databases_backups_fork_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_databases_backups_fork_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
