--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_it_IT.json
@@ -60,5 +60,7 @@
   "pci_databases_backups_fork_price_unit_hour": "/ora",
   "pci_databases_backups_fork_price_unit_switch_label": "Visualizzare le tariffe mensili",
   "pci_databases_backups_fork_restore_mode_title": "Punto di ripristino",
-  "pci_databases_backups_fork_restore_mode_description": "Seleziona il punto di ripristino dal quale il servizio sarà duplicato."
+  "pci_databases_backups_fork_restore_mode_description": "Seleziona il punto di ripristino dal quale il servizio sarà duplicato.",
+  "pci_databases_backups_fork_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_databases_backups_fork_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
