--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/translations/Messages_pt_PT.json
@@ -60,5 +60,7 @@
   "pci_databases_backups_fork_price_unit_hour": "/hora",
   "pci_databases_backups_fork_price_unit_switch_label": "Mostrar os preços ao mês",
   "pci_databases_backups_fork_restore_mode_title": "Ponto de restauro",
-  "pci_databases_backups_fork_restore_mode_description": "Escolha o ponto de restauro a partir do qual o serviço será duplicado."
+  "pci_databases_backups_fork_restore_mode_description": "Escolha o ponto de restauro a partir do qual o serviço será duplicado.",
+  "pci_databases_backups_fork_spec_flavor_CPU_one": "{{cpu}} vCore",
+  "pci_databases_backups_fork_spec_flavor_CPU_many": "{{cpu}} vCores"
 }
