fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Seleziona la durata:",
   "server_configuration_monitoring_activated": "Attivo",
   "server_configuration_monitoring_disabled": "Disattivato",
+  "server_configuration_monitoring_status_disabled": "Disattivato",
+  "server_configuration_monitoring_status_proactive": "Attivato con intervento proattivo",
+  "server_configuration_monitoring_status_no-proactive": "Attivato senza intervento proattivo",
+  "server_configuration_monitoring_status_tooltip_disabled": "Intervento nel datacenter disattivato in caso di fallimento del test PING",
+  "server_configuration_monitoring_status_tooltip_proactive": "Richiesta di intervento nel datacenter",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Nessuna richiesta di intervento nel datacenter",
+  "server_configuration_monitoring_update_modal_title": "Monitoraggio",
+  "server_configuration_monitoring_update_modal_intro": "Il monitoraggio del tuo server dedicato corrisponde a un ping ICMP realizzato sulla macchina per testare lo stato della connettività.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Disattivato",
+  "server_configuration_monitoring_update_modal_status_proactive": "Attivato con intervento proattivo",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Attivato senza intervento proattivo",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "Il server non è monitorato e in caso di incidente non riceverai alcun alert da parte di OVHcloud.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. In caso di alert, sarà necessario dare il consenso per autorizzare OVHcloud a intervenire direttamente sulla macchina. Un ticket di supporto verrà creato automaticamente per consentirti di seguire lo stato dell’operazione.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. OVHcloud non interverrà sulla macchina senza una richiesta diretta da parte tua.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Gli interventi sul server {{serverName}} sono attivi.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Gli interventi sono disattivati sul server {{serverName}}.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring.",
   "server_configuration_distribution": "Ultimo sistema operativo (SO) installato da OVHcloud",
   "server_configuration_distribution_none": "Non installato",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "È possibile indicare qui l’URL di uno script di post-installazione, che permette di completare l’installazione del sistema con la massima semplicità. In questo modo è possibile configurare facilmente le proprie preferenze e installare software. Attenzione: il tempo massimo di esecuzione dello script è di un’ora.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Valore restituito dallo script:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "È il risultato, parziale o totale, atteso sull'uscita standard a seguito dell'esecuzione dello script. Puoi lasciare vuoto questo campo, ma non è consigliato.",
-  "server_configuration_installation_form_installSqlServer": "Installa SQLServer",
   "server_configuration_installation_form_useDistribKernel": "Installa un kernel d'origine",
   "server_configuration_installation_form_useSpla": "Utilizza una licenza SPLA",
   "server_configuration_installation_form_ssh": "Chiavi SSH:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "Questo server dedicato fa parte di un cluster Nutanix: {{clusterName}}",
   "server_nutanix_cluster_node_warning_2": "Consigliamo di apportare tutte le modifiche di configurazione direttamente nella dashboard del server associato al cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Tutte le azioni di fatturazione associate a questo server sono visibili sul cluster Nutanix: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Informazione importante sull'obsolescenza di Real Time Monitoring: il servizio continuerà a funzionare fino al 30 giugno 2022. A partire da questa data la visualizzazione dei dati di consumo verrà interrotta, senza impatto sul funzionamento del tuo server.",
-  "server_configuration_monitoring_status_disabled": "Disattivato",
-  "server_configuration_monitoring_status_proactive": "Attivato con intervento proattivo",
-  "server_configuration_monitoring_status_no-proactive": "Attivato senza intervento proattivo",
-  "server_configuration_monitoring_status_tooltip_disabled": "Intervento nel datacenter disattivato in caso di fallimento del test PING",
-  "server_configuration_monitoring_status_tooltip_proactive": "Richiesta di intervento nel datacenter",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Nessuna richiesta di intervento nel datacenter",
-  "server_configuration_monitoring_update_modal_title": "Monitoraggio",
-  "server_configuration_monitoring_update_modal_intro": "Il monitoraggio del tuo server dedicato corrisponde a un ping ICMP realizzato sulla macchina per testare lo stato della connettività.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Disattivato",
-  "server_configuration_monitoring_update_modal_status_proactive": "Attivato con intervento proattivo",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Attivato senza intervento proattivo",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "Il server non è monitorato e in caso di incidente non riceverai alcun alert da parte di OVHcloud.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. In caso di alert, sarà necessario dare il consenso per autorizzare OVHcloud a intervenire direttamente sulla macchina. Un ticket di supporto verrà creato automaticamente per consentirti di seguire lo stato dell’operazione.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. OVHcloud non interverrà sulla macchina senza una richiesta diretta da parte tua.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Gli interventi sul server {{serverName}} sono attivi.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Gli interventi sono disattivati sul server {{serverName}}.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring."
+  "server_rtm_eol_info": "Informazione importante sull'obsolescenza di Real Time Monitoring: il servizio continuerà a funzionare fino al 30 giugno 2022. A partire da questa data la visualizzazione dei dati di consumo verrà interrotta, senza impatto sul funzionamento del tuo server."
 }
