--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pt_PT.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Selecione a duração:",
   "server_configuration_monitoring_activated": "Ativado",
   "server_configuration_monitoring_disabled": "Desativado",
+  "server_configuration_monitoring_status_disabled": "Desativado",
+  "server_configuration_monitoring_status_proactive": "Ativado com intervenção proativa",
+  "server_configuration_monitoring_status_no-proactive": "Ativado sem intervenção proativa",
+  "server_configuration_monitoring_status_tooltip_disabled": "Intervenção em datacenter desativada em caso de falha no teste PING",
+  "server_configuration_monitoring_status_tooltip_proactive": "Intervenção em datacenter solicitada",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Intervenção em datacenter não solicitada",
+  "server_configuration_monitoring_update_modal_title": "Monitorização",
+  "server_configuration_monitoring_update_modal_intro": "A monitorização do servidor dedicado corresponde a um ping ICMP realizado no seu servidor para testar o estado da conectividade.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Desativado",
+  "server_configuration_monitoring_update_modal_status_proactive": "Ativado com intervenção proativa",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Ativado sem intervenção proativa",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "O seu servidor não é monitorizado e não receberá nenhum alerta da OVHcloud em caso de incidente.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. Autoriza que a OVHcloud intervenha diretamente na sua máquina em caso de alertas. Um ticket de suporte é automaticamente criado para que possa fazer o acompanhamento desta intervenção.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. A OVHcloud não intervirá na sua máquina sem um pedido direto da sua parte.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "As intervenções no servidor {{serverName}} estão ativas.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "As intervenções estão desativadas no servidor {{serverName}}.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "Ocorreu um erro aquando da alteração da opção de monitorização.",
   "server_configuration_distribution": "Último sistema operativo (SO) instalado pela OVHcloud",
   "server_configuration_distribution_none": "Não instalado",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "Aqui, pode indicar o URL de um script de pós-instalação. Permite finalizar a instalação do seu sistema de forma simples. Assim, poderá configurar facilmente as suas preferências e instalar softwares. Atenção: o tempo de execução do script é de 1 hora, no máximo.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Valor de resposta do script:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "Trata-se de todo ou parte do resultado aguardado pela saída padrão do servidor após a execução do script. Pode deixar estes campos vazios, mas é desaconselhado.",
-  "server_configuration_installation_form_installSqlServer": "Instalar sqlServer",
   "server_configuration_installation_form_useDistribKernel": "Instalar o kernel original",
   "server_configuration_installation_form_useSpla": "Utilizar uma licença SPLA",
   "server_configuration_installation_form_ssh": "Chave ssh:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "Este servidor dedicado faz parte de um cluster Nutanix: {{clusterName}}.",
   "server_nutanix_cluster_node_warning_2": "Recomendamos que efetue todas as alterações de configuração diretamente no painel de controlo do servidor associado ao seu cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Todas as ações de faturação relacionadas com este servidor são visíveis no seu cluster Nutanix: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Informação importante relativa à obsolescência do serviço Real Time Monitoring - o serviço continuará a funcionar até 30 de junho de 2022. Após essa data, iremos parar a apresentação dos seus dados de consumo, sem que isso afete o funcionamento do seu servidor.",
-  "server_configuration_monitoring_status_disabled": "Desativado",
-  "server_configuration_monitoring_status_proactive": "Ativado com intervenção proativa",
-  "server_configuration_monitoring_status_no-proactive": "Ativado sem intervenção proativa",
-  "server_configuration_monitoring_status_tooltip_disabled": "Intervenção em datacenter desativada em caso de falha no teste PING",
-  "server_configuration_monitoring_status_tooltip_proactive": "Intervenção em datacenter solicitada",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Intervenção em datacenter não solicitada",
-  "server_configuration_monitoring_update_modal_title": "Monitorização",
-  "server_configuration_monitoring_update_modal_intro": "A monitorização do servidor dedicado corresponde a um ping ICMP realizado no seu servidor para testar o estado da conectividade.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Desativado",
-  "server_configuration_monitoring_update_modal_status_proactive": "Ativado com intervenção proativa",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Ativado sem intervenção proativa",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "O seu servidor não é monitorizado e não receberá nenhum alerta da OVHcloud em caso de incidente.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. Autoriza que a OVHcloud intervenha diretamente na sua máquina em caso de alertas. Um ticket de suporte é automaticamente criado para que possa fazer o acompanhamento desta intervenção.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Com a monitorização do seu servidor, receberá os alertas por e-mail, no endereço associado ao identificador do seu contacto técnico. A OVHcloud não intervirá na sua máquina sem um pedido direto da sua parte.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "As intervenções no servidor {{serverName}} estão ativas.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "As intervenções estão desativadas no servidor {{serverName}}.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Ocorreu um erro aquando da alteração da opção de monitorização."
+  "server_rtm_eol_info": "Informação importante relativa à obsolescência do serviço Real Time Monitoring - o serviço continuará a funcionar até 30 de junho de 2022. Após essa data, iremos parar a apresentação dos seus dados de consumo, sem que isso afete o funcionamento do seu servidor."
 }
