--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_de_DE.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Wählen Sie die Laufzeit aus:",
   "server_configuration_monitoring_activated": "Aktiviert",
   "server_configuration_monitoring_disabled": "Deaktiviert",
+  "server_configuration_monitoring_status_disabled": "Deaktiviert",
+  "server_configuration_monitoring_status_proactive": "Aktiviert mit proaktivem Eingriff",
+  "server_configuration_monitoring_status_no-proactive": "Aktiviert ohne proaktiven Eingriff",
+  "server_configuration_monitoring_status_tooltip_disabled": "Eingriff im Rechenzentrum bei fehlgeschlagenem PING-Test deaktiviert.",
+  "server_configuration_monitoring_status_tooltip_proactive": "Eingriff im Rechenzentrum angefordert",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Kein Eingriff im Rechenzentrum angefordert",
+  "server_configuration_monitoring_update_modal_title": "Monitoring",
+  "server_configuration_monitoring_update_modal_intro": "Das Monitoring Ihres Dedicated Servers entspricht einem ICMP Echo-Request (Ping) auf Ihrem Server, um dessen Konnektivität zu testen.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Deaktiviert",
+  "server_configuration_monitoring_update_modal_status_proactive": "Aktiviert mit proaktivem Eingriff",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Aktiviert ohne proaktiven Eingriff",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "Ihr Server wird nicht überwacht und im Falle einer Störung erhalten Sie keinerlei Benachrichtigungen von OVHcloud.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Ihr Server wird überwacht. Sie erhalten per E-Mail Benachrichtigungen an die Adresse, die der Kennung Ihres technischen Ansprechpartners zugeordnet ist. Sie erteilen Ihre Zustimmung dazu, dass OVHcloud im Falle einer Fehlermeldung direkt auf Ihrer Maschine eingreift. Ein Support-Ticket wird automatisch erstellt, damit Sie diesen Eingriff nachverfolgen können.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Ihr Server wird überwacht. Sie erhalten per E-Mail Benachrichtigungen an die Adresse, die der Kennung Ihres technischen Ansprechpartners zugeordnet ist. OVHcloud greift nur auf Ihrer Maschine ein, wenn Sie dies veranlassen.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind aktiviert.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind deaktiviert.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "Beim Wechsel der Monitoring-Option ist ein Fehler aufgetreten.",
   "server_configuration_distribution": "Neuestes von OVHcloud installiertes Betriebssystem",
   "server_configuration_distribution_none": "Nicht installiert",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "Sie können hier die URL eines Post-Installationsskripts angeben. Damit können Sie die Installation Ihres Systems einfach abschließen. Sie können somit einfach Ihre Präferenzen konfigurieren und Programme installieren. Achtung: Die Ausführungsdauer des Skripts beträgt bis zu 1 Stunde.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Ausgabewert des Skripts:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "Es handelt sich um das Ganze oder einen Teil des erwarteten Ergebnisses der Standardausgabe nach dem Ausführen des Skripts. Sie können dieses Feld leer lassen (davon wird jedoch abgeraten).",
-  "server_configuration_installation_form_installSqlServer": "sqlServer installieren",
   "server_configuration_installation_form_useDistribKernel": "Original-Kernel installieren",
   "server_configuration_installation_form_useSpla": "SPLA-Lizenz verwenden",
   "server_configuration_installation_form_ssh": "SSH-Schlüssel:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "Dieser Dedicated Server ist Teil des Nutanix-Clusters: {{clusterName}}",
   "server_nutanix_cluster_node_warning_2": "Wir empfehlen Ihnen, Ihre Konfiguration direkt im Dashboard des Servers zu bearbeiten, der mit Ihrem Nutanix-Cluster verbunden ist. Zum Dashboard: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Alle mit diesem Server verbundenen Abrechnungen sehen Sie in Ihrem Nutanix-Cluster: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Wichtige Informationen zur Einstellung des veralterten Dienstes Real Time Monitoring. Dieser Dienst wird nur noch bis zum 30. Juni 2022 betrieben. Nach diesem Datum wird die Anzeige der Daten Ihrer Nutzung eingestellt. Dies hat keine Auswirkungen auf den Betrieb Ihres Servers.",
-  "server_configuration_monitoring_status_disabled": "Deaktiviert",
-  "server_configuration_monitoring_status_proactive": "Aktiviert mit proaktivem Eingriff",
-  "server_configuration_monitoring_status_no-proactive": "Aktiviert ohne proaktiven Eingriff",
-  "server_configuration_monitoring_status_tooltip_disabled": "Eingriff im Rechenzentrum bei fehlgeschlagenem PING-Test deaktiviert.",
-  "server_configuration_monitoring_status_tooltip_proactive": "Eingriff im Rechenzentrum angefordert",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Kein Eingriff im Rechenzentrum angefordert",
-  "server_configuration_monitoring_update_modal_title": "Monitoring",
-  "server_configuration_monitoring_update_modal_intro": "Das Monitoring Ihres Dedicated Servers entspricht einem ICMP Echo-Request (Ping) auf Ihrem Server, um dessen Konnektivität zu testen.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Deaktiviert",
-  "server_configuration_monitoring_update_modal_status_proactive": "Aktiviert mit proaktivem Eingriff",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Aktiviert ohne proaktiven Eingriff",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "Ihr Server wird nicht überwacht und im Falle einer Störung erhalten Sie keinerlei Benachrichtigungen von OVHcloud.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Ihr Server wird überwacht. Sie erhalten per E-Mail Benachrichtigungen an die Adresse, die der Kennung Ihres technischen Ansprechpartners zugeordnet ist. Sie erteilen Ihre Zustimmung dazu, dass OVHcloud im Falle einer Fehlermeldung direkt auf Ihrer Maschine eingreift. Ein Support-Ticket wird automatisch erstellt, damit Sie diesen Eingriff nachverfolgen können.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Ihr Server wird überwacht. Sie erhalten per E-Mail Benachrichtigungen an die Adresse, die der Kennung Ihres technischen Ansprechpartners zugeordnet ist. OVHcloud greift nur auf Ihrer Maschine ein, wenn Sie dies veranlassen.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind aktiviert.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Die Eingriffe auf dem Server {{serverName}} sind deaktiviert.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Beim Wechsel der Monitoring-Option ist ein Fehler aufgetreten."
+  "server_rtm_eol_info": "Wichtige Informationen zur Einstellung des veralterten Dienstes Real Time Monitoring. Dieser Dienst wird nur noch bis zum 30. Juni 2022 betrieben. Nach diesem Datum wird die Anzeige der Daten Ihrer Nutzung eingestellt. Dies hat keine Auswirkungen auf den Betrieb Ihres Servers."
 }
