--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Select the duration:",
   "server_configuration_monitoring_activated": "Enabled",
   "server_configuration_monitoring_disabled": "Disabled",
+  "server_configuration_monitoring_status_disabled": "Disabled",
+  "server_configuration_monitoring_status_proactive": "Enabled with proactive intervention",
+  "server_configuration_monitoring_status_no-proactive": "Enabled without proactive intervention",
+  "server_configuration_monitoring_status_tooltip_disabled": "Datacentre intervention disabled in the event of ping test failure",
+  "server_configuration_monitoring_status_tooltip_proactive": "Datacentre intervention requested",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Datacentre intervention not requested",
+  "server_configuration_monitoring_update_modal_title": "Monitoring",
+  "server_configuration_monitoring_update_modal_intro": "Your dedicated server monitoring is an ICMP ping performed on your server to test its connectivity status.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Disabled",
+  "server_configuration_monitoring_update_modal_status_proactive": "Enabled with proactive intervention",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Enabled without proactive intervention",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "Your server is not monitored, and you will not receive any alerts from OVHcloud in the event of an incident.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Your server is monitored, and you will receive email alerts to the address linked to your technical contact’s ID. You authorize OVHcloud to intervene directly on your machine in the event of alerts. A support ticket is automatically created, so you can follow up with your ticket.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Your server is monitored, and you will receive email alerts to the address linked to your technical contact’s ID. OVHcloud will not intervene on your machine without a direct request from you.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interventions are enabled on the {{serverName}} server.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interventions are disabled on the {{serverName}} server.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "An error has occurred changing the monitoring option.",
   "server_configuration_distribution": "Last operating system (OS) installed by OVHcloud",
   "server_configuration_distribution_none": "Not installed",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "You can enter the URL for a post-installation script here. It will help you complete the system installation. This way, you can easily configure your preferences and install software programs. Important: The execution time for a script is 1 hour maximum.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Script return value:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "It is all or part of the expected result on the standard output following the execution of the script. You can leave this field empty, but we do not recommend doing this.",
-  "server_configuration_installation_form_installSqlServer": "Install SQL server",
   "server_configuration_installation_form_useDistribKernel": "Install original kernel",
   "server_configuration_installation_form_useSpla": "Use SPLA licence ",
   "server_configuration_installation_form_ssh": "SSH keys:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "This dedicated server is part of a Nutanix cluster: {{clusterName}}.",
   "server_nutanix_cluster_node_warning_2": "We recommend making all of the configuration changes directly in the dashboard of the server linked to your Nutanix cluster: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "All billing actions linked to this server are visible on your Nutanix cluster: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Important information - the Real Time Monitoring Service will soon be obsolete. It will continue running until 30 June 2022. After this date, we will stop displaying your consumption data. This will not affect your server’s operation.",
-  "server_configuration_monitoring_status_disabled": "Disabled",
-  "server_configuration_monitoring_status_proactive": "Enabled with proactive intervention",
-  "server_configuration_monitoring_status_no-proactive": "Enabled without proactive intervention",
-  "server_configuration_monitoring_status_tooltip_disabled": "Datacentre intervention disabled in the event of ping test failure",
-  "server_configuration_monitoring_status_tooltip_proactive": "Datacentre intervention requested",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Datacentre intervention not requested",
-  "server_configuration_monitoring_update_modal_title": "Monitoring",
-  "server_configuration_monitoring_update_modal_intro": "Your dedicated server monitoring is an ICMP ping performed on your server to test its connectivity status.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Disabled",
-  "server_configuration_monitoring_update_modal_status_proactive": "Enabled with proactive intervention",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Enabled without proactive intervention",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "Your server is not monitored, and you will not receive any alerts from OVHcloud in the event of an incident.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Your server is monitored, and you will receive email alerts to the address linked to your technical contact’s ID. You authorize OVHcloud to intervene directly on your machine in the event of alerts. A support ticket is automatically created, so you can follow up with your ticket.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Your server is monitored, and you will receive email alerts to the address linked to your technical contact’s ID. OVHcloud will not intervene on your machine without a direct request from you.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interventions are enabled on the {{serverName}} server.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interventions are disabled on the {{serverName}} server.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "An error has occurred changing the monitoring option."
+  "server_rtm_eol_info": "Important information - the Real Time Monitoring Service will soon be obsolete. It will continue running until 30 June 2022. After this date, we will stop displaying your consumption data. This will not affect your server’s operation."
 }
