--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Seleccione la duración:",
   "server_configuration_monitoring_activated": "Activada",
   "server_configuration_monitoring_disabled": "Desactivada",
+  "server_configuration_monitoring_status_disabled": "Desactivado",
+  "server_configuration_monitoring_status_proactive": "Activado con intervención proactiva",
+  "server_configuration_monitoring_status_no-proactive": "Activado sin intervención proactiva",
+  "server_configuration_monitoring_status_tooltip_disabled": "Intervención en datacenter desactivada en caso de no obtener respuesta a PING",
+  "server_configuration_monitoring_status_tooltip_proactive": "Intervención en datacenter solicitada",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Intervención en datacenter no solicitada",
+  "server_configuration_monitoring_update_modal_title": "Monitoring",
+  "server_configuration_monitoring_update_modal_intro": "El monitoring de su servidor dedicado corresponde a un ping ICMP realizado en su servidor para comprobar el estado de su conectividad.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Desactivado",
+  "server_configuration_monitoring_update_modal_status_proactive": "Activado con intervención proactiva",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Activado sin intervención proactiva",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "Su servidor no está monitorizado y no recibirá ninguna alerta por parte de OVHcloud en caso de incidencia.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Su servidor está monitorizado y recibirá las alertas correspondientes por correo electrónico en la dirección asociada a su contacto técnico. En caso de alerta, acepta que OVHcloud intervenga directamente en su máquina. Se creará un tíquet de soporte de forma automática para que pueda consultar el progreso de la intervención.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Su servidor está monitorizado y recibirá las alertas correspondientes por correo electrónico en la dirección asociada a su contacto técnico. OVHcloud no intervendrá en su máquina sin una solicitud directa por su parte.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Las intervenciones en el servidor {{serverName}} están activadas.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Las intervenciones en el servidor {{serverName}} están desactivadas.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "Se ha producido un error al modificar la opción de monitoring.",
   "server_configuration_distribution": "Último sistema operativo (SO) instalado por OVHcloud",
   "server_configuration_distribution_none": "No instalado",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "Puede indicar aquí la URL de un script de post-instalación. Este permite finalizar la instalación de su sistema de forma más sencilla. De esta forma, puede configurar fácilmente sus preferencias e instalar programas de software. Atención: el tiempo máximo de ejecución del script es de una hora.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Valor de retorno del script:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "Se trata de todo o una parte del resultado esperado por la salida estándar al ejecutar el script. Puede dejar este campo vacío, pero no es recomendable.",
-  "server_configuration_installation_form_installSqlServer": "Instalar SQL Server",
   "server_configuration_installation_form_useDistribKernel": "Instalar kernel original",
   "server_configuration_installation_form_useSpla": "Utilizar licencia SPLA",
   "server_configuration_installation_form_ssh": "Llaves SSH:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "Este servidor dedicado forma parte de un cluster Nutanix: {{clusterName}}.",
   "server_nutanix_cluster_node_warning_2": "Le recomendamos que realice las modificaciones de configuración directamente desde el panel de control del servidor asociado a su cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Puede consultar todas las acciones de facturación asociadas a este servidor en su cluster Nutanix: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Información importante sobre la obsolescencia de Real Time Monitoring: el servicio seguirá funcionando hasta el 30 de junio de 2022. A partir de esa fecha, sus datos de consumo dejarán de mostrarse, sin que ello afecte al funcionamiento de su servidor.",
-  "server_configuration_monitoring_status_disabled": "Desactivado",
-  "server_configuration_monitoring_status_proactive": "Activado con intervención proactiva",
-  "server_configuration_monitoring_status_no-proactive": "Activado sin intervención proactiva",
-  "server_configuration_monitoring_status_tooltip_disabled": "Intervención en datacenter desactivada en caso de no obtener respuesta a PING",
-  "server_configuration_monitoring_status_tooltip_proactive": "Intervención en datacenter solicitada",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Intervención en datacenter no solicitada",
-  "server_configuration_monitoring_update_modal_title": "Monitoring",
-  "server_configuration_monitoring_update_modal_intro": "El monitoring de su servidor dedicado corresponde a un ping ICMP realizado en su servidor para comprobar el estado de su conectividad.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Desactivado",
-  "server_configuration_monitoring_update_modal_status_proactive": "Activado con intervención proactiva",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Activado sin intervención proactiva",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "Su servidor no está monitorizado y no recibirá ninguna alerta por parte de OVHcloud en caso de incidencia.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Su servidor está monitorizado y recibirá las alertas correspondientes por correo electrónico en la dirección asociada a su contacto técnico. En caso de alerta, acepta que OVHcloud intervenga directamente en su máquina. Se creará un tíquet de soporte de forma automática para que pueda consultar el progreso de la intervención.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Su servidor está monitorizado y recibirá las alertas correspondientes por correo electrónico en la dirección asociada a su contacto técnico. OVHcloud no intervendrá en su máquina sin una solicitud directa por su parte.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Las intervenciones en el servidor {{serverName}} están activadas.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Las intervenciones en el servidor {{serverName}} están desactivadas.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Se ha producido un error al modificar la opción de monitoring."
+  "server_rtm_eol_info": "Información importante sobre la obsolescencia de Real Time Monitoring: el servicio seguirá funcionando hasta el 30 de junio de 2022. A partir de esa fecha, sus datos de consumo dejarán de mostrarse, sin que ello afecte al funcionamiento de su servidor."
 }
