--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
@@ -302,6 +302,23 @@
   "server_tab_USB_STORAGE_order_select_duration": "Wybierz okres:",
   "server_configuration_monitoring_activated": "Aktywny",
   "server_configuration_monitoring_disabled": "Wyłączony",
+  "server_configuration_monitoring_status_disabled": "Wyłączony",
+  "server_configuration_monitoring_status_proactive": "Włączony z aktywną interwencją",
+  "server_configuration_monitoring_status_no-proactive": "Włączony bez aktywnej interwencji",
+  "server_configuration_monitoring_status_tooltip_disabled": "W przypadku braku odpowiedzi na test PING zespół OVHcloud nie podejmie interwencji ",
+  "server_configuration_monitoring_status_tooltip_proactive": "Interwencja w centrum danych została zlecona",
+  "server_configuration_monitoring_status_tooltip_no-proactive": " Interwencja w centrum danych nie została zlecona",
+  "server_configuration_monitoring_update_modal_title": "Monitoring",
+  "server_configuration_monitoring_update_modal_intro": "Monitoring serwera dedykowanego realizowany jest za pomocą pakietów ICMP ping. Pozwalają one na sprawdzenie stanu łączności z serwerem.",
+  "server_configuration_monitoring_update_modal_status_disabled": "Wyłączony",
+  "server_configuration_monitoring_update_modal_status_proactive": "Włączony z aktywną interwencją",
+  "server_configuration_monitoring_update_modal_status_no-proactive": "Włączony bez aktywnej interwencji",
+  "server_configuration_monitoring_update_modal_description_status_disabled": "Twój serwer nie jest monitorowany i nie otrzymasz żadnego ostrzeżenia od OVHcloud w przypadku incydentu.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Twój serwer jest monitorowany. Będziesz otrzymywał alerty pocztą elektroniczną na adres przypisany do kontaktu technicznego. Wyrażasz zgodę, aby w przypadku alertów firma OVHcloud podejmowała interwencje bezpośrednio na Twojej maszynie. Utworzony zostaje automatycznie ticket, dzięki któremu będziesz mógł monitorować przebieg interwencji.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Twój serwer jest monitorowany. Będziesz otrzymywał alerty pocztą elektroniczną na adres przypisany do kontaktu technicznego. OVHcloud nie będzie interweniować na Twojej maszynie, jeśli nie otrzyma od Ciebie takiej dyspozycji.",
+  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interwencje na serwerze {{serverName}} są włączone.",
+  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interwencje na serwerze {{serverName}} zostały wyłączone.",
+  "server_configuration_monitoring_update_modal_update_request_failed": "Wystąpił błąd podczas zmiany opcji monitoringu.",
   "server_configuration_distribution": "Ostatni system operacyjny (OS) zainstalowany przez OVHcloud",
   "server_configuration_distribution_none": "Nie zainstalowany",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
@@ -617,7 +634,6 @@
   "server_configuration_installation_form_postInstallationScriptLink_help": "Możesz tutaj wskazać adres skryptu poinstalacyjnego.  Pozwala on na zakończenie instalacji systemu.  Możesz skonfigurować ustawienia i zainstalować wybrane oprogramowanie.  Uwaga: wykonywanie skryptu trwa maksymalnie godzinę.",
   "server_configuration_installation_form_postInstallationScriptLinkReturn": "Wartość zwracana przez skrypt:",
   "server_configuration_installation_form_postInstallationScriptLinkReturn_help": "Chodzi o część lub całość wyniku otrzymywanego po wykonaniu skryptu.  Możesz zostawić to pole puste, ale jest to odradzane.",
-  "server_configuration_installation_form_installSqlServer": "Zainstaluj SQL Server",
   "server_configuration_installation_form_useDistribKernel": "Zainstaluj oryginalne jądro",
   "server_configuration_installation_form_useSpla": "Skorzystaj z licencji SPLA",
   "server_configuration_installation_form_ssh": "Klucz SSH:",
@@ -1109,22 +1125,5 @@
   "server_nutanix_cluster_node_warning_1": "Ten serwer dedykowany jest częścią klastra Nutanix: {{clusterName}}.",
   "server_nutanix_cluster_node_warning_2": "Zalecamy przeprowadzenie wszystkich zmian konfiguracji bezpośrednio na dashboardzie serwera powiązanego z klastrem Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Wszystkie operacje płatnicze związane z tym serwerem są widoczne w klastrze Nutanix: {{clusterDashboardLink}}",
-  "server_rtm_eol_info": "Ważna informacja dotycząca usługi Real Time Monitoring - usługa będzie działać do 30 czerwca 2022. Po tym terminie wstrzymamy wyświetlanie danych dotyczących zużycia. Nie będzie to miało wpływu na działanie serwera.",
-  "server_configuration_monitoring_status_disabled": "Wyłączony",
-  "server_configuration_monitoring_status_proactive": "Włączony z aktywną interwencją",
-  "server_configuration_monitoring_status_no-proactive": "Włączony bez aktywnej interwencji",
-  "server_configuration_monitoring_status_tooltip_disabled": "W przypadku braku odpowiedzi na test PING zespół OVHcloud nie podejmie interwencji ",
-  "server_configuration_monitoring_status_tooltip_proactive": "Interwencja w centrum danych została zlecona",
-  "server_configuration_monitoring_status_tooltip_no-proactive": " Interwencja w centrum danych nie została zlecona",
-  "server_configuration_monitoring_update_modal_title": "Monitoring",
-  "server_configuration_monitoring_update_modal_intro": "Monitoring serwera dedykowanego realizowany jest za pomocą pakietów ICMP ping. Pozwalają one na sprawdzenie stanu łączności z serwerem.",
-  "server_configuration_monitoring_update_modal_status_disabled": "Wyłączony",
-  "server_configuration_monitoring_update_modal_status_proactive": "Włączony z aktywną interwencją",
-  "server_configuration_monitoring_update_modal_status_no-proactive": "Włączony bez aktywnej interwencji",
-  "server_configuration_monitoring_update_modal_description_status_disabled": "Twój serwer nie jest monitorowany i nie otrzymasz żadnego ostrzeżenia od OVHcloud w przypadku incydentu.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Twój serwer jest monitorowany. Będziesz otrzymywał alerty pocztą elektroniczną na adres przypisany do kontaktu technicznego. Wyrażasz zgodę, aby w przypadku alertów firma OVHcloud podejmowała interwencje bezpośrednio na Twojej maszynie. Utworzony zostaje automatycznie ticket, dzięki któremu będziesz mógł monitorować przebieg interwencji.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Twój serwer jest monitorowany. Będziesz otrzymywał alerty pocztą elektroniczną na adres przypisany do kontaktu technicznego. OVHcloud nie będzie interweniować na Twojej maszynie, jeśli nie otrzyma od Ciebie takiej dyspozycji.",
-  "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interwencje na serwerze {{serverName}} są włączone.",
-  "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interwencje na serwerze {{serverName}} zostały wyłączone.",
-  "server_configuration_monitoring_update_modal_update_request_failed": "Wystąpił błąd podczas zmiany opcji monitoringu."
+  "server_rtm_eol_info": "Ważna informacja dotycząca usługi Real Time Monitoring - usługa będzie działać do 30 czerwca 2022. Po tym terminie wstrzymamy wyświetlanie danych dotyczących zużycia. Nie będzie to miało wpływu na działanie serwera."
 }
