--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_de_DE.json
@@ -3,10 +3,12 @@
   "data_processing_title": "Data Processing",
   "data_processing_jobs": "Jobs",
   "data_processing_region": "Region",
+  "data_processing_job_id": "ID",
+  "data_processing_job_notebook": "Notebook",
   "data_processing_job_type": "Typ",
   "data_processing_job_cores_ram": "vCores/RAM",
   "data_processing_job_ram": "RAM",
-  "data_processing_job_cores_abbreviation": "c",
+  "data_processing_job_spec": "{{vcores}}c/{{ram}}",
   "data_processing_job_creation_date": "Erstellt",
   "data_processing_job_status": "Status",
   "data_processing_job_status_pending": "Ausstehend",
@@ -21,8 +23,5 @@
   "data_processing_list_button_job_details": "Job-Details",
   "data_processing_list_button_job_ui": "Zum grafischen Interface des Jobs",
   "data_processing_list_button_job_monitoring": "Zum Monitoring",
-  "data_processing_list_button_job_terminate": "Job beenden",
-  "data_processing_job_id": "ID",
-  "data_processing_job_notebook": "Notebook",
-  "data_processing_job_spec": "{{vcores}}c/{{ram}}"
+  "data_processing_list_button_job_terminate": "Job beenden"
 }
