--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_en_GB.json
@@ -3,10 +3,12 @@
   "data_processing_title": "Data Processing",
   "data_processing_jobs": "Jobs",
   "data_processing_region": "Region",
+  "data_processing_job_id": "ID",
+  "data_processing_job_notebook": "Notebook",
   "data_processing_job_type": "Type",
   "data_processing_job_cores_ram": "vCores/RAM",
   "data_processing_job_ram": "RAM",
-  "data_processing_job_cores_abbreviation": "c",
+  "data_processing_job_spec": "{{vcores}} c/{{ram}}",
   "data_processing_job_creation_date": "Created",
   "data_processing_job_status": "Status",
   "data_processing_job_status_pending": "Queued",
@@ -21,8 +23,5 @@
   "data_processing_list_button_job_details": "Job details",
   "data_processing_list_button_job_ui": "Access the graphical interface for the job",
   "data_processing_list_button_job_monitoring": "Access monitoring",
-  "data_processing_list_button_job_terminate": "Finish job",
-  "data_processing_job_id": "ID",
-  "data_processing_job_notebook": "Notebook",
-  "data_processing_job_spec": "{{vcores}} c/{{ram}}"
+  "data_processing_list_button_job_terminate": "Finish job"
 }
