--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_es_ES.json
@@ -3,10 +3,12 @@
   "data_processing_title": "Data Processing",
   "data_processing_jobs": "Jobs",
   "data_processing_region": "Región",
+  "data_processing_job_id": "ID",
+  "data_processing_job_notebook": "AI Notebooks",
   "data_processing_job_type": "Tipo",
   "data_processing_job_cores_ram": "vCores/RAM",
   "data_processing_job_ram": "RAM",
-  "data_processing_job_cores_abbreviation": "c",
+  "data_processing_job_spec": "{{vcores}}c/{{ram}}",
   "data_processing_job_creation_date": "Creado",
   "data_processing_job_status": "Estado",
   "data_processing_job_status_pending": "Pendiente",
@@ -21,8 +23,5 @@
   "data_processing_list_button_job_details": "Detalles del job",
   "data_processing_list_button_job_ui": "Acceder a la interfaz gráfica del job",
   "data_processing_list_button_job_monitoring": "Acceder a la monitorización",
-  "data_processing_list_button_job_terminate": "Terminar el job",
-  "data_processing_job_id": "ID",
-  "data_processing_job_notebook": "AI Notebooks",
-  "data_processing_job_spec": "{{vcores}}c/{{ram}}"
+  "data_processing_list_button_job_terminate": "Terminar el job"
 }
