--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_pl_PL.json
@@ -3,10 +3,12 @@
   "data_processing_title": "Data processing",
   "data_processing_jobs": "Zadania",
   "data_processing_region": "Region",
+  "data_processing_job_id": "ID",
+  "data_processing_job_notebook": "Notebook",
   "data_processing_job_type": "Typ",
   "data_processing_job_cores_ram": "vCores/RAM",
   "data_processing_job_ram": "RAM",
-  "data_processing_job_cores_abbreviation": "c",
+  "data_processing_job_spec": "{{vcores}} c/{{ram}}",
   "data_processing_job_creation_date": "Utworzone",
   "data_processing_job_status": "Status",
   "data_processing_job_status_pending": "Oczekujące",
@@ -21,8 +23,5 @@
   "data_processing_list_button_job_details": "Szczegóły zadania",
   "data_processing_list_button_job_ui": "Dostęp do interfejsu graficznego zadania",
   "data_processing_list_button_job_monitoring": "Dostęp do monitoringu",
-  "data_processing_list_button_job_terminate": "Zakończ zadanie",
-  "data_processing_job_id": "ID",
-  "data_processing_job_notebook": "Notebook",
-  "data_processing_job_spec": "{{vcores}} c/{{ram}}"
+  "data_processing_list_button_job_terminate": "Zakończ zadanie"
 }
