--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/translations/Messages_pt_PT.json
@@ -3,10 +3,12 @@
   "data_processing_title": "Processamento de dados",
   "data_processing_jobs": "Jobs",
   "data_processing_region": "Região",
+  "data_processing_job_id": "ID",
+  "data_processing_job_notebook": "Notebook",
   "data_processing_job_type": "Tipo",
   "data_processing_job_cores_ram": "vCores/RAM",
   "data_processing_job_ram": "RAM",
-  "data_processing_job_cores_abbreviation": "c",
+  "data_processing_job_spec": "{{vcores}} c/{{ram}}",
   "data_processing_job_creation_date": "Criado",
   "data_processing_job_status": "Estado",
   "data_processing_job_status_pending": "Em espera",
@@ -21,8 +23,5 @@
   "data_processing_list_button_job_details": "Detalhes do job",
   "data_processing_list_button_job_ui": "Aceder à interface gráfica do job",
   "data_processing_list_button_job_monitoring": "Aceder à monitorização",
-  "data_processing_list_button_job_terminate": "Terminar o job",
-  "data_processing_job_id": "ID",
-  "data_processing_job_notebook": "Notebook",
-  "data_processing_job_spec": "{{vcores}} c/{{ram}}"
+  "data_processing_list_button_job_terminate": "Terminar o job"
 }
