--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_es_ES.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_es_ES.json
@@ -85,5 +85,7 @@
   "overTheBox_reverse_dns": "Registro DNS inverso",
   "overTheBox_detail_link_guide": "Guías",
   "overthebox_detail_links": "Enlaces",
-  "overTheBox_service_id": "Identificador del servicio:"
+  "overTheBox_service_id": "Identificador del servicio:",
+  "overTheBox_release_channel_beta": "Versión beta",
+  "overTheBox_release_channel_alpha": "Versión alpha"
 }
