--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_it_IT.json
@@ -8,5 +8,5 @@
   "ovhManagerPccDashboardComponentActivationStatus_needsConfiguration": "In attesa di configurazione",
   "ovhManagerPccDashboardComponentActivationStatus_awaitingValidation": "In attesa di convalida",
   "ovhManagerPccDashboardComponentActivationStatus_unknown": "Stato sconosciuto",
-  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Ospitato su {{ datacenter }}"
+  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Ospitato in {{ datacenter }}"
 }
