--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_pl_PL.json
@@ -8,5 +8,5 @@
   "ovhManagerPccDashboardComponentActivationStatus_needsConfiguration": "Trwa konfiguracja",
   "ovhManagerPccDashboardComponentActivationStatus_awaitingValidation": "Trwa zatwierdzanie",
   "ovhManagerPccDashboardComponentActivationStatus_unknown": "Nieznany status",
-  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Hosting {{ datacenter }}"
+  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Hostowany w {{datacenter}}"
 }
