--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_en_GB.json
@@ -2,15 +2,15 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Without additional options",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Without additional options",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualisation Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualisation Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "With NSX-v, you can configure the rules for accessing your networks, create your security policy and deploy the different network services that you need to build your infrastructure, in just a few minutes.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealise Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealise Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "With NSX-v, you can configure the rules for accessing your networks, create your security policy, and deploy the different network services required to build your infrastructure quickly.",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "With vROps, you can manage your infrastructure, enable monitoring on your virtual machines, detect any anomalies and anticipate resource requirements easily to take care of your platform’s quality of service (QoS).",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualisation Datacenter for vSphere (NSX-v) and vRealise Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualisation Datacenter for vSphere (NSX-v) and vRealise Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "With NSX-v, you can configure the rules for accessing your networks, create your security policy and deploy the different network services that you need to build your infrastructure, in just a few minutes.</p><p>With vROps, you can manage your infrastructure, enable monitoring on your virtual machines, detect any anomalies and anticipate resource requirements easily to take care of your platform’s quality of service (QoS).",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) and vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) and vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "With NSX-v, you can configure the rules for accessing your networks, create your security policy, and deploy the different network services required to build your infrastructure quickly.</p><p>With vROps, you can manage your infrastructure, enable monitoring on your virtual machines, detect any anomalies and anticipate resource requirements easily to take care of your platform’s quality of service (QoS).",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS) Certification",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_pcidss": "Payment card data is the target of a number of different hacking and fraud attempts. With PCI DSS, OVHcloud has implemented the very strictest security measures to ensure the very highest level of security for your payment infrastructures.",
