--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/translations/Messages_de_DE.json
@@ -8,5 +8,5 @@
   "ovhManagerPccDashboardComponentActivationStatus_needsConfiguration": "Wird konfiguriert",
   "ovhManagerPccDashboardComponentActivationStatus_awaitingValidation": "Warten auf Validierung",
   "ovhManagerPccDashboardComponentActivationStatus_unknown": "Unbekannter Status",
-  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Gehostet auf {{ datacenter }}"
+  "ovhManagerPccDashboardComponentActivationStatus_hosted_on": "Gehostet in {{ datacenter }}"
 }
