--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_es_ES.json
@@ -8,5 +8,5 @@
   "dedicatedCloud_datacenters_order_datastore": "Añadir un datastore",
   "dedicatedCloud_datacenters_loading_error": "Se ha producido un error al cargar la información de los datacenters.",
   "dedicatedCloud_datacenters_commercialRange": "Gama",
-  "dedicatedCloud_datacenters_add_not_available": "La adición de nuevos datacenters no está disponible en este momento. Estamos trabajando para que esta funcionalidad esté disponible en breve."
+  "dedicatedCloud_datacenters_add_not_available": "No es posible añadir nuevos datacenters en este momento. Estamos trabajando para poder ofrecer esta funcionalidad próximamente."
 }
